<resources>
    <string name="app_name">IzinBoss</string>

    <!-- Layout -->
    <string name="welcome">Welcome</string>
    <string name="welcome_desc">Let\'s get you started with</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="powered_by_dicoding">Powered by Dicoding Story API v1</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_new_story">Add New Story</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="input_email_password">Please input your email and password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="create_account">Create a New Account to Continue</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="add_description">Add description</string>
    <string name="request_leave">Request Leave</string>
    <string name="image_from_user">Image from User</string>
    <string name="image_preview">Image Preview</string>
    <string name="english">English</string>
    <string name="indonesian">Indonesian</string>
    <string name="start_now">Start Now</string>

    <!-- Menu -->
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="company">Company</string>

    <!-- Onboarding -->
    <string name="skip_this"><![CDATA[Skip This >]]></string>
    <string name="onboarding_title_1">IzinBoss app is here</string>
    <string name="onboarding_desc_1">You can now manage Leave Requests easier than ever using this app.</string>
    <string name="onboarding_title_2">Re-design with Material 3 Components</string>
    <string name="onboarding_desc_2">Now the app adheres to M3 Design Standards</string>
    <string name="onboarding_title_3">Authenticate with Firebase and Google</string>
    <string name="onboarding_desc_3">Your data is secure, we do not store your passwords, ever</string>
    <string name="onboarding_title_4">Fast and Reliable</string>
    <string name="onboarding_desc_4">It just works. No ads, no bloatwares.</string>

    <!-- Used in Activities Dialogs -->
    <string name="input_name">Please input your name</string>
    <string name="input_password">Please input your password</string>
    <string name="input_email">Please input your email address</string>
    <string name="confirmation">Confirmation</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to Log Out?</string>
    <string name="continue_on">Continue</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="choose_picture">Choose a Picture</string>
    <string name="permissions_error">ERROR: Could not obtain the required permissions</string>
    <string name="language_switch">The language has been switched</string>
    <string name="change_language">Change Language</string>
    <string name="pass_less_than_8_char">Password must not be less than 8 characters</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="account_created">Account Created! Please Login</string>
    <string name="approved">Approved</string>
    <string name="pending">Pending</string>
    <string name="rejected">Rejected</string>
    <string name="dark_mode">Dark Mode</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_id">User ID</string>
    <string name="bio">Bio</string>
    <string name="role">Role</string>
    <string name="account_deleted">Your Account Has Been Deleted</string>
    <string name="employees">Employees</string>
    <string name="managers">Managers</string>
    <string name="required">Required</string>
</resources>