...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_join_company"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_margin="32dp"
        android:text="Join Company"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
...
